--- a/cougsday2018.sass
+++ b/cougsday2018.sass
@@ -112,10 +112,10 @@ main
 .icon-bar a 
 	display: block
 	text-align: center
-	padding: 16px
+	padding: 0.5em
 	transition: all 0.3s ease
 	color: white
-	font-size: 20px
+	font-size: 1.75em
 	border-radius: 9px
 
 .icon-bar a:hover 
@@ -550,7 +550,7 @@ nav.top-nav
 	z-index: 100
 	display: flex
 	flex-direction: row-reverse
-	background: #000a2e
+	background: #000929
 	border-bottom: 1px solid #036
 	top: 0
 	position: fixed
